Issue #23685: Fix usage of PyMODINIT_FUNC in _json, _scproxy, nis, pyexpat _codecs_cn, _codecs_hk, _codecs_iso2022, _codecs_jp, _codecs_kr and _codecs_tw modules.

pyexpat.c doesn't need to redeclare PyMODINIT_FUNC, it's already declared in
Include/pyport.h.